RLStrategy into classes of different algorithms